# autonomous_ai_rbt

./: .gitignore  .pre-commit-config.yaml  AUTONOMBOT_TECHNICAL_REPORT.md  CONTRIBUTING.md  DEPLOYMENT_READY_REPORT.md  JETSON_DEPLOYMENT_CHECKLIST.md  LICENSE  README.md  SYSTEM_DIAGRAMS.md  frames_2025-08-07_21.19.07.gv  prepare_github.sh  pyproject.toml  setup_github.sh  validate_deployment.sh
.github/workflows/: ci.yml
amr_testing/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
amr_testing/log/: latest_build
amr_testing/src/: lifecyle_node.py  quality_ofservice_pub.py
docker/: .dockerignore  Dockerfile  docker-compose.yml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/autonomous_tb3/lib/autonomous_tb3/: KeyboardTeleop  keyboard_controle
install/autonomous_tb3/share/autonomous_tb3/: package.sh
log/: latest_build  latest_list
media/: autonombot_demo.webm
myamr_bringup/: CMakeLists.txt  package.xml
myamr_bringup/launch/: real_robot.launch.py  simulated_robot.launch.py
myamr_controller/: CMakeLists.txt  package.xml
myamr_controller/config/: myamr_controllers.yaml  twist_mux_topics.yaml
myamr_controller/myamr_controller/: simple_controller.py
myamr_controller/src/: twist_relay.cpp
myamr_description/: CMakeLists.txt
myamr_description/launch/: display.launch.py
myamr_description/urdf/: myamr.urdf.xacro  myamr_gazebo.xacro
myamr_localization/: CMakeLists.txt  package.xml
myamr_localization/src/: kalman_filter.cpp  odometry_motion_model.cpp
myamr_mapping/: CMakeLists.txt  package.xml
myamr_mapping/include/myamr_mapping/: mapping_with_known_poses.hpp
myamr_mapping/src/: mapping_with_known_poses.cpp
myamr_motion/: package.xml  setup.cfg  setup.py
myamr_planning/: setup.cfg  setup.py
myamr_utils/: CMakeLists.txt
src/autonombot_description/: CMakeLists.txt  package.xml
src/autonombot_description/launch/: display.launch.py  gazebo.launch.py
src/autonombot_description/urdf/: autonombot.urdf.xacro  autonombot_gazebo.xacro  autonombot_ros2_control.xacro
src/autonombot_drivers/: CMakeLists.txt  package.xml
src/autonombot_drivers/autonombot_drivers/: noisy_controller.py  twist_relay.py
src/autonombot_drivers/config/: autonombot_drivers.yaml
src/autonombot_drivers/launch/: controller.launch.py  joystick_teleop.launch.py
src/autonombot_firmware/: CMakeLists.txt  README.md  autonombot_interface.xml  package.xml
src/autonombot_firmware/autonombot_firmware/: hcsr04_driver.py  jetson_sensor_manager.py
src/autonombot_firmware/include/autonombot_firmware/: autonombot_interface.hpp
src/autonombot_firmware/launch/: hardware_interface.launch.py  jetson_hardware.launch.py
src/autonombot_firmware/scripts/: jetson_setup.sh  validate_hardware.py
src/autonombot_firmware/src/: autonombot_interface.cpp
src/autonombot_launch/: CMakeLists.txt  package.xml
src/autonombot_launch/launch/: real_robot.launch.py  simulated_robot.launch.py
src/autonombot_launch/rviz/: autonombot_simulation.rviz
src/autonombot_localization/: CMakeLists.txt  package.xml
src/autonombot_localization/autonombot_localization/: ultrasonic_localization.py  ultrasonic_position_constraint.py
src/autonombot_localization/config/: ekf_ultrasonic.yaml
src/autonombot_localization/launch/: global_localization.launch.py  local_localization.launch.py
src/autonombot_mapping/: CMakeLists.txt  package.xml
src/autonombot_mapping/config/: slam_toolbox.yaml
src/autonombot_mapping/launch/: slam.launch.py
src/autonombot_navigation/: CMakeLists.txt  package.xml
src/autonombot_navigation/behavior_tree/: tuned_navigation_w_replanning_and_recovery.xml
src/autonombot_navigation/config/: advanced_navigation.yaml  behavior_server.yaml  bt_navigator.yaml  controller_server.yaml  costmap.yaml  enhanced_localization.yaml  planner_server.yaml
src/autonombot_navigation/launch/: navigation.launch.py
src/autonombot_vision/: package.xml  requirements.txt  setup.cfg  setup.py
src/autonombot_vision/autonombot_vision/: advanced_vision_navigator.py  minimal_yolo_obstacles.py  performance_monitor.py  vision_costmap_updater.py  vision_obstacle_detector.py  yolo_detector.py
src/autonombot_vision/launch/: minimal_yolo.launch.py  vision_navigation.launch.py
src/autonomous_tb3/: setup.py
src/autonomous_tb3/config/: tb3_world.pgm
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/myamr_files/: setup.cfg  setup.py
src/myrobot_bringup/: CMakeLists.txt  package.xml
src/myrobot_bringup/launch/: real_robot.launch.py  simulated_robot.launch.py
src/myrobot_controller/: CMakeLists.txt  package.xml  setup.py
src/myrobot_controller/config/: bumperbot_controllers.yaml  joy_teleop.yaml
src/myrobot_controller/launch/: joystick_teleop.launch.py
src/myrobot_controller/myrobot_controller/: simple_controller.py
src/myrobot_description/: CMakeLists.txt
src/myrobot_description/launch/: display.launch.py  gazebo.launch.py
src/myrobot_description/urdf/: bumperbot.urdf.xacro  myrobot_gazebo.xacro
src/myrobot_localization/: CMakeLists.txt  package.xml
src/myrobot_localization/launch/: local_localization.launch.py
src/myrobot_localization/myrobot_localization/: kalman_filter.py
src/myrobot_mapping/: CMakeLists.txt
src/myrobot_utils/: CMakeLists.txt
(+160 files in other folders)
