<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>autonombot_launch</name>
  <version>0.0.0</version>
  <description>Autonombot Launch package</description>
  <maintainer email="maintainer@example.com">Maintainer</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>autonombot_firmware</exec_depend>
  <exec_depend>autonombot_drivers</exec_depend>
  <exec_depend>autonombot_description</exec_depend>
  <exec_depend>autonombot_localization</exec_depend>
  <exec_depend>autonombot_mapping</exec_depend>
  <exec_depend>autonombot_navigation</exec_depend>
  <exec_depend>autonombot_vision</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
